--- a/3iL/games/trashgame/trashgame.html
+++ b/3iL/games/trashgame/trashgame.html
@@ -10,7 +10,7 @@
   <div id="game-container">
     
     
-    <img id="character"    src="../../public/img/poubelle.svg" alt="" width="100" height="100">
+    <img id="character"    src="../../publice/img/poubelle.svg" alt="" width="100" height="100">
   </div>
   <div id="score" class="centered-text">Score: 0</div>
 <div id="lives" class="centered-text">Lives: 3</div>
