--- a/3iL/index.html
+++ b/3iL/index.html
@@ -106,7 +106,7 @@
                 
             <div class="carte">
                 <div class="img-container">
-                    <img id='carte' class="img-mobile" src="../3iL/publice/img/cartemobile.png" alt="">
+                    <img id='carte' class="img-mobile" src="../publice/img/cartemobile.png" alt="">
                     <div id="mobilejour">
                         <i onclick="(redirectTo('games/vraifaux/vraifaux.html'))" class="fa-solid fa-location-dot ping-icon7"></i>
                         <i onclick="(redirectTo('games/higherlower/higherlower.html'))" class="fa-solid fa-location-dot ping-icon8"></i>
@@ -124,7 +124,7 @@
             </div>
             <div class="carte2">
                 <div class="img-container">
-                    <img id='carte2' class="img-mobile" src="../3iL/publice/img/cartepc.jpg" alt="">
+                    <img id='carte2' class="img-mobile" src="../publice/img/cartepc.jpg" alt="">
                     <div id="pcjour">
                         <i onclick="(redirectTo('games/vraifaux/vraifaux.html'))" class="fa-solid fa-location-dot ping-icon"></i>
                         <i onclick="(redirectTo('games/higherlower/higherlower.html'))" class="fa-solid fa-location-dot ping-icon2"></i>
