--- a/3iL/games/vraifaux/vraifaux.html
+++ b/3iL/games/vraifaux/vraifaux.html
@@ -31,4 +31,9 @@
             <button id="cancel" onclick="cancelFenetre()">Prochaine question</button>
         </div>
     </div>
+    <a href="../../index.html">
+        <center><button class="boutonRetour">
+                <p>Retour à l'accueil</p>
+            </button> </center>
+    </a>
 </body>
