--- a/3iL/pages/sources.html
+++ b/3iL/pages/sources.html
@@ -1,35 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../global.css">
     <link rel="stylesheet" href="../pages/pages.css">
-    <title >Sources</title>
+    <title>Sources</title>
 </head>
+
 <body>
     <h1 style="text-align: center;">Sources</h1>
-    <center><p style="text-align: center; font-size: 0.8rem; width: 70%;">
-    
-    <h1>Général</h1>
-    <p>
-        https://chat.openai.com/ <br>
-        https://firefly.adobe.com/ <br>
-        https://animejs.com/documentation/ <br>
-        https://developer.mozilla.org/ <br>
-        https://accessibilite.numerique.gouv.fr/ <br>
-        https://fonts.google.com/ <br>
-    </p>
-    <h1>Tchat Bot</h1>
-    <p>
-<a href="https://drive.google.com/file/d/1xfbsl_2HKpX2ue3PFTESaSJtoOmz2Si0/view?usp=sharing" style="color: var(--clr-bgcolor)">Documentation</a>
-    </p>
-    <br>
-    <br>
+    <center>
+        <p style="text-align: center; font-size: 0.8rem; width: 70%;">
 
-    <br>
+        <h1>Général</h1>
+        <p>
+            https://chat.openai.com/ <br>
+            https://firefly.adobe.com/ <br>
+            https://animejs.com/documentation/ <br>
+            https://developer.mozilla.org/ <br>
+            https://accessibilite.numerique.gouv.fr/ <br>
+            https://fonts.google.com/ <br>
+        </p>
+        <h1>Tchat Bot</h1>
+        <p>
+            <a href="https://drive.google.com/file/d/1xfbsl_2HKpX2ue3PFTESaSJtoOmz2Si0/view?usp=sharing"
+                style="color: var(--clr-bgcolor)">Documentation</a>
+        </p>
+        <br>
+        <br>
 
-    <center><a href="../index.html">Retour à l'accueil</a></center>
+        <br>
+
+        <a href="../index.html">
+            <center><button class="boutonRetour">
+                    <p>Retour à l'accueil</p>
+                </button> </center>
+        </a>
 </body>
-</html>
 
+</html>
