--- a/3iL/games/higherlower/higherlower.html
+++ b/3iL/games/higherlower/higherlower.html
@@ -11,12 +11,10 @@
   <div class="container">
     <div class="box" id="leftBox">
       <h2>Aliment 1</h2>
-      <img src="" alt="Aliment 1" id="leftImage">
       <p>Emissions de CO2: <span id="leftCO2"></span> kg</p>
     </div>
     <div class="box" id="rightBox">
       <h2>Aliment 2</h2>
-      <img src="" alt="Aliment 2" id="rightImage">
       <p>Emissions de CO2: <span id="rightCO2">?</span> kg</p>
     </div>
   </div>
@@ -25,6 +23,10 @@
     <button onclick="checkAnswer('lower')">Lower</button>
   </div>
   <p>Score: <span id="score">0</span></p>
+
+  <a href="../../index.html"><center><button class="boutonRetour">
+    <p>Retour à l'accueil</p>
+  </button> </center></a>
 
   <script src="higherlower.js"></script>
 </body>
